--- a/index.html
+++ b/index.html
@@ -7,4 +7,72 @@
         <title>Rebme Sutol</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    
+    <body>
+        <header>
+
+            <div class="hero">
+                <div class="title-box">
+                    <h1>This website is awesome</h1>
+
+                    <div class="subtext">
+                        <p>Subtext has smaller font and lower contrast.</p>
+                    </div>
+
+                    <button type="button">Sign up</button>
+                </div>
+
+                <div class="img-PLACEHOLDER">
+                    <p>temporary</p>
+                </div>
+            </div>
+
+            <div class="header-bar">
+                <h2>
+                    <div class="logo">
+                        <p>Header Logo</p>
+                    </div>
+
+                    <div class="subtext">
+                        <a href="#">header link one</a>
+                        <a href="#">header link two</a>
+                        <a href="#">header link three</a>
+                    </div>
+                </h2>
+            </div>
+        </header>
+        <div class="info">
+            <h2>Some random information.</h2>
+
+            <div class="catalogue">
+                <div class="item">
+                    <div class="item-img"> </div>
+                    <div class="item-text">temp</div> 
+                </div>
+
+                <div class="item">
+                    <div class="item-img"> </div>
+                    <div class="item-text">temp</div> 
+                </div>
+
+                <div class="item">
+                    <div class="item-img"> </div>
+                    <div class="item-text">temp</div> 
+                </div>
+
+                <div class="item">
+                    <div class="item-img"> </div>
+                    <div class="item-text">temp</div> 
+                </div>
+            </div>
+
+        </div>
+        <div class="quote">
+            <div class="main"> </div>
+            <div class="author"> </div>
+        </div>
+        <div class="CTA">
+            <div class="text">CTA</div>
+            <button type="button">Sign up</button>
+        </div>
+        <footer>Copyright © Me</footer>
+    </body>
