--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <body>
         <header>
 
+            <div class="header-bar">
+                <h2>
+                    <div class="logo">
+                        <p>Header Logo</p>
+                    </div>
+
+                    <div class="subtext">
+                        <a href="#">header link one</a>
+                        <a href="#">header link two</a>
+                        <a href="#">header link three</a>
+                    </div>
+                </h2>
+            </div>
+
             <div class="hero">
                 <div class="title-box">
                     <h1>This website is awesome</h1>
@@ -26,19 +40,6 @@
                 </div>
             </div>
 
-            <div class="header-bar">
-                <h2>
-                    <div class="logo">
-                        <p>Header Logo</p>
-                    </div>
-
-                    <div class="subtext">
-                        <a href="#">header link one</a>
-                        <a href="#">header link two</a>
-                        <a href="#">header link three</a>
-                    </div>
-                </h2>
-            </div>
         </header>
         <div class="info">
             <h2>Some random information.</h2>
@@ -67,8 +68,8 @@
 
         </div>
         <div class="quote">
-            <div class="main"> </div>
-            <div class="author"> </div>
+            <div class="main">placeholder text</div>
+            <div class="author">thor</div>
         </div>
         <div class="CTA">
             <div class="text">CTA</div>
