--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <header>
 
             <div class="header-bar">
-                <h2>
                     <div class="logo">
                         <p>Header Logo</p>
+                    </div>
+
+                    <div class="spacer">
+                        
                     </div>
 
                     <div class="subtext">
@@ -21,7 +24,6 @@
                         <a href="#">header link two</a>
                         <a href="#">header link three</a>
                     </div>
-                </h2>
             </div>
 
             <div class="hero">
@@ -29,14 +31,14 @@
                     <h1>This website is awesome</h1>
 
                     <div class="subtext">
-                        <p>Subtext has smaller font and lower contrast.</p>
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     </div>
 
                     <button type="button">Sign up</button>
                 </div>
 
-                <div class="img-PLACEHOLDER">
-                    <p>temporary</p>
+                <div class="imgs">
+                    <img src="resources/cp-barbershop-1-scaled.jpg" alt="Barbershop soap bar" width="auto" height="400">
                 </div>
             </div>
 
@@ -68,8 +70,8 @@
 
         </div>
         <div class="quote">
-            <div class="main">placeholder text</div>
-            <div class="author">thor</div>
+            <div class="main">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
         </div>
         <div class="CTA">
             <div class="text">CTA</div>
