Header, hero, and info bars completed. HTML and basic CSS laid out for the other sections.

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
 
             <div class="catalogue">
                 <div class="item">
-                    <div class="item-img"> </div>
-                    <div class="item-text">temp</div> 
+                    <div class="item-img">temp</div>
+                    <div class="item-subtext"> </div> 
                 </div>
 
                 <div class="item">
-                    <div class="item-img"> </div>
-                    <div class="item-text">temp</div> 
+                    <div class="item-img">temp</div>
+                    <div class="item-subtext"> </div> 
                 </div>
 
                 <div class="item">
-                    <div class="item-img"> </div>
-                    <div class="item-text">temp</div> 
+                    <div class="item-img">temp</div>
+                    <div class="item-subtext"> </div> 
                 </div>
 
                 <div class="item">
-                    <div class="item-img"> </div>
-                    <div class="item-text">temp</div> 
+                    <div class="item-img">temp</div>
+                    <div class="item-subtext"> </div> 
                 </div>
             </div>
 
