--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     </head>
     <body>
         <header>
-
             <div class="header-bar">
                     <div class="logo">
                         <p>Header Logo</p>
@@ -49,22 +48,27 @@
             <div class="catalogue">
                 <div class="item">
                     <div class="item-img">temp</div>
-                    <div class="item-subtext"> </div> 
+                    <div class="item-subtext">temp caption</div> 
                 </div>
 
                 <div class="item">
                     <div class="item-img">temp</div>
-                    <div class="item-subtext"> </div> 
+                    <div class="item-subtext">temp caption</div> 
+                </div>        
+
+                <div class="item">
+                    <div class="item-img">temp</div>
+                    <div class="item-subtext">temp caption</div> 
+                </div>
+    
+                <div class="item">
+                    <div class="item-img">temp</div>
+                    <div class="item-subtext">temp caption</div> 
                 </div>
 
                 <div class="item">
                     <div class="item-img">temp</div>
-                    <div class="item-subtext"> </div> 
-                </div>
-
-                <div class="item">
-                    <div class="item-img">temp</div>
-                    <div class="item-subtext"> </div> 
+                    <div class="item-subtext">temp caption</div> 
                 </div>
             </div>
 
@@ -74,8 +78,11 @@
             <div class="author">-Thor, God of Thunder</div>
         </div>
         <div class="CTA">
-            <div class="text">CTA</div>
+            <div class="text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
             <button type="button">Sign up</button>
         </div>
-        <footer>Copyright © Me</footer>
+        <footer>Copyright © Daniel Olmo 2024</footer>
     </body>
